--- a/nosotros.html
+++ b/nosotros.html
@@ -45,6 +45,9 @@ fluo.com.mx
 <body>
   <p id="size"></p>
   <div id="loading">
+    <div id="salsaWrap">
+      <div id="salsaLiquid"></div>
+    </div>
     <p id="percentage">1%</p>
   </div>
   <!-- Ocultar nav hideDisplay  -->
