--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ fluo.com.mx
 <body>
   <p id="size"></p>
   <div id="loading">
+    <div id="salsaWrap">
+      <div id="salsaLiquid"></div>
+    </div>
     <p id="percentage">1%</p>
   </div>
   <!-- Ocultar nav hideDisplay  -->
@@ -153,7 +156,6 @@ fluo.com.mx
           <br>
             <p class="prox">Próximamente</p>
         </div>
-
     </section>
     <div id="interface">
       <a role="button" onclick="countSlider('prev')"><img src="img/icons/slider-arrowOut.svg" alt="" height="40" onmouseover="overArrow('on', this)" onmouseout="overArrow('out', this)"></a>
@@ -179,27 +181,21 @@ fluo.com.mx
     window.console.log("%cCoded by Mn - http://fluo.com.mx", "color:pink;  font-size: 10px; background:#000; padding:2px;");
     function _(el){return document.querySelector(el); }
     if(bowser.mobile || bowser.tablet || /SymbianOS/.test(window.navigator.userAgent)) checkMobileIndex = true;
-
-
     document.onkeydown = checkKey;
-
     function checkKey(e) {
-
     e = e || window.event;
-
-    // if (e.keyCode == '38') {
-    //   console.log("up")
-    // }
-    // else if (e.keyCode == '40') {
-    //   console.log("down")
-    // }
-    if (e.keyCode == '37') {
-     countSlider('prev')
-    }
-    else if (e.keyCode == '39') {
-     countSlider('next')
-    }
-
+      // if (e.keyCode == '38') {
+      //   console.log("up")
+      // }
+      // else if (e.keyCode == '40') {
+      //   console.log("down")
+      // }
+      if (e.keyCode == '37') {
+       countSlider('prev')
+      }
+      else if (e.keyCode == '39') {
+       countSlider('next')
+      }
     }
   </script>
   <script src="js/main.js" charset="utf-8"></script>
