--- a/sot.html
+++ b/sot.html
@@ -236,6 +236,7 @@ fluo.com.mx
       <polygon id="polyTr" fill="#098442" points="0,535 1920,535 1920,540 0,540 "/>
     </svg>
   </div>
+  <div id="transitionDos"></div>
   <script src="js/bowser.min.js" charset="utf-8"></script>
   <script type="text/javascript">
     var checkMobileIndex = false;
