--- a/sot.html
+++ b/sot.html
@@ -233,7 +233,7 @@ fluo.com.mx
   </footer>
   <div id="transition" class="hideDisplay">
     <svg id="svgTr" viewBox="0 0 1920 1080">
-      <polygon id="polyTr" fill="#098442" points="0,535 1920,535 1920,540 0,540 "/>
+      <path id="polyTr" fill="#098442" d="M3.2,2312.4h1921.8V936c0,0-246.4,191.8-416.1,228.4c-289.8,62.6-550.5,104.1-1036-72 c-281.8-102.2-473,121-473,121L3.2,2312.4z"/>
     </svg>
   </div>
   <div id="transitionDos"></div>
