--- a/potet.html
+++ b/potet.html
@@ -233,7 +233,18 @@ fluo.com.mx
   </footer>
   <div id="transition" class="hideDisplay">
     <svg id="svgTr" viewBox="0 0 1920 1080">
-      <path id="pathPotet" fill="#d33640" d="M4004,1417.5V2550H2025.5c0,0-283.5-895,130.5-1278C2672,794.6,4004,1417.5,4004,1417.5z"/>
+      <path id="pathPotet" fill="#d33640" d="M949,913.5c563,0,990.5,166.5,990.5,166.5h-1981C-41.5,1080,386,913.5,949,913.5z"/>
+    </svg>
+  </div>
+  <div id="transitionScrollUnoBottom" class="hideDisplay">
+    <svg viewBox="0 0 1920 166.5">
+      <path fill="#FFFFFF" opacity="0.50" d="M949,0c563,0,990.5,166.5,990.5,166.5h-1981C-41.5,166.5,386,0,949,0z"/>
+    </svg>
+  </div>
+
+  <div id="transitionScrollUnoTop" class="hideDisplay">
+    <svg viewBox="0 0 1920 166.5">
+      <path fill="#FFFFFF" opacity="0.50" d="M-41.5,0h1981c0,0-427.5,166.5-990.5,166.5S-41.5,0-41.5,0z"/>
     </svg>
   </div>
   <script src="js/bowser.min.js" charset="utf-8"></script>
