--- a/tlayolis.html
+++ b/tlayolis.html
@@ -236,7 +236,17 @@ fluo.com.mx
       <polygon id="polyTr" fill="#098442" points="0,535 1920,535 1920,540 0,540 "/>
     </svg>
   </div>
-  <div id="transitionDos"></div>
+  <div id="transitionScrollUnoBottom" class="hideDisplay">
+    <svg viewBox="0 0 1920 166.5">
+      <path fill="#FFFFFF" opacity="0.50" d="M949,0c563,0,990.5,166.5,990.5,166.5h-1981C-41.5,166.5,386,0,949,0z"/>
+    </svg>
+  </div>
+
+  <div id="transitionScrollUnoTop" class="hideDisplay">
+    <svg viewBox="0 0 1920 166.5">
+      <path fill="#FFFFFF" opacity="0.50" d="M-41.5,0h1981c0,0-427.5,166.5-990.5,166.5S-41.5,0-41.5,0z"/>
+    </svg>
+  </div>
   <script src="js/bowser.min.js" charset="utf-8"></script>
   <script type="text/javascript">
     var checkMobileIndex = false;
