--- a/nosotros.html
+++ b/nosotros.html
@@ -127,32 +127,89 @@ fluo.com.mx
           </header>
           <!-- PRODUCTOS DESPLEGABLES -->
           <ul>
-            <li class="liImg" style="background: #fdc339;">
-              <img src="img/items/0.png" alt="" width="250">
+            <li class="liImg" style="background: #fdc339;" onmouseover="overNosotros('over', 0)" onmouseout="overNosotros('out', 0)">
+              <img class="imgProductoNos unrotateImage" src="img/items/0.png" alt="" width="250">
+              <div class="overInfo" style="background:rgba(254,171,59)">
+                <h2>Sal de Mar</h2>
+                <p>Perfecto empujón para cambiar <br>
+                las perspectivas cotidianas.</p>
+                <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" alt="" width="25">
+              </div>
             </li>
-            <li class="liImg" style="background: #f48f3d;">
-              <img src="img/items/1.png" alt="" width="250">
+            <li class="liImg" style="background: #f48f3d;" onmouseover="overNosotros('over', 1)" onmouseout="overNosotros('out', 1)">
+              <img class="imgProductoNos unrotateImage" src="img/items/1.png" alt="" width="250">
+              <div class="overInfo" style="background:rgba(207,68,58)">
+                <h2>Habanero</h2>
+                <p>Perfecto empujón para cambiar <br>
+                las perspectivas cotidianas.</p>
+                <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" alt="" width="25">
+              </div>
+
             </li>
-            <li class="liImg" style="background: #cf3a44;">
-              <img src="img/items/2.png" alt="" width="250">
+            <li class="liImg" style="background: #cf3a44;" onmouseover="overNosotros('over', 2)" onmouseout="overNosotros('out', 2)">
+              <img class="imgProductoNos unrotateImage" src="img/items/2.png" alt="" width="250">
+              <div class="overInfo" style="background:rgba(253,193,57)">
+                <h2>Chile de árbol</h2>
+                <p>Perfecto empujón para cambiar <br>
+                las perspectivas cotidianas.</p>
+                <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" alt="" width="25">
+              </div>
             </li>
-            <li class="liImg" style="background: #be2872;">
-              <img src="img/items/3.png" alt="" width="250">
+            <li class="liImg" style="background: #be2872;" onmouseover="overNosotros('over', 3)" onmouseout="overNosotros('out', 3)">
+              <img class="imgProductoNos unrotateImage" src="img/items/3.png" alt="" width="250">
+              <div class="overInfo" style="background:rgba(156,50,59)">
+                <h2>Chile de árbol</h2>
+                <p>Ideal para disfrutar una comida <br>
+                con amigos y personas cercanas.</p>
+                <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" alt="" width="25">
+              </div>
             </li>
-            <li class="liImg" style="background: #9c323b;">
-              <img src="img/items/4.png" alt="" width="250">
+            <li class="liImg" style="background: #9c323b;" onmouseover="overNosotros('over', 4)" onmouseout="overNosotros('out', 4)">
+              <img class="imgProductoNos unrotateImage" src="img/items/4.png" alt="" width="250">
+              <div class="overInfo" style="background:rgba(187,148,64)">
+                <h2>Yuca</h2>
+                <p>El mood ideal para salir de fiesta y <br>
+                conocer nuevos lugares, personas <br>
+                y experiencias.</p>
+                <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" alt="" width="25">
+              </div>
             </li>
-            <li class="liImg" style="background: #bb9440;">
-              <img src="img/items/5.png" alt="" width="250">
+            <li class="liImg" style="background: #bb9440;" onmouseover="overNosotros('over', 5)" onmouseout="overNosotros('out', 5)">
+              <img class="imgProductoNos unrotateImage" src="img/items/5.png" alt="" width="250">
+              <div class="overInfo" style="background:rgba(190,40, 114)">
+                <h2>Sal de Mar</h2>
+                <p>Perfecto empujón para cambiar <br>
+                las perspectivas cotidianas.</p>
+                <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" alt="" width="25">
+              </div>
             </li>
-            <li class="liImg" style="background: #47100f;">
-              <img src="img/items/6.png" alt="" width="250">
+            <li class="liImg" style="background: #47100f;" onmouseover="overNosotros('over', 6)" onmouseout="overNosotros('out', 6)">
+              <img class="imgProductoNos unrotateImage" src="img/items/6.png" alt="" width="250">
+              <div class="overInfo" style="background:rgba(186,113,50)">
+                <h2>Barbecue</h2>
+                <p>Ideal para disfrutar una comida <br>
+                con amigos y personas cercanas.</p>
+                <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" alt="" width="25">
+              </div>
             </li>
-            <li class="liImg" style="background: #208245;">
-              <img src="img/items/7.png" alt="" width="250">
+            <li class="liImg" style="background: #208245;" onmouseover="overNosotros('over', 7)" onmouseout="overNosotros('out', 7)">
+              <img class="imgProductoNos unrotateImage" src="img/items/7.png" alt="" width="250">
+              <div class="overInfo" style="background:rgba(71,16,15)">
+                <h2>Jalapeño</h2>
+                <p>El perfecto empujón para cambiar <br>
+                  las perspectivas cotidianas.</p>
+                <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" alt="" width="25">
+              </div>
             </li>
-            <li class="liImg" style="background: #ba7132;">
-              <img src="img/items/8.png" alt="" width="250">
+            <li class="liImg" style="background: #ba7132;" onmouseover="overNosotros('over', 8)" onmouseout="overNosotros('out', 8)">
+              <img class="imgProductoNos unrotateImage" src="img/items/8.png" alt="" width="250">
+              <div class="overInfo" style="background:rgba(32,130,69)">
+                <h2>Habanero</h2>
+                <p>El mood ideal para salir de fiesta y <br>
+                conocer nuevos lugares, personas <br>
+                y experiencias.</p>
+                <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" alt="" width="25">
+              </div>
             </li>
             <li class="liTexto" style="background: #e6e6e6;">
               <a>
@@ -206,6 +263,8 @@ fluo.com.mx
     var checkMobileIndex = false;
     window.console.log("%cCoded by Mn - http://fluo.com.mx", "color:pink;  font-size: 10px; background:#000; padding:2px;");
     function _(el){return document.querySelector(el); }
+    function __(el){return document.getElementsByClassName(el); }
+
     if(bowser.mobile || bowser.tablet || /SymbianOS/.test(window.navigator.userAgent)) checkMobileIndex = true;
   </script>
   <script src="js/nosotros.js" charset="utf-8"></script>
