--- a/sot.html
+++ b/sot.html
@@ -194,20 +194,20 @@ fluo.com.mx
         </a>
         <ul id="sliderIndividualWrap">
           <li style="width:25%;">
-            <img  class="imgSliderInd" src="img/sliderI/t1.png" alt="">
+            <img  class="imgSliderInd" src="img/sliderI/s1.png" alt="">
           </li>
           <li style="width:25%;">
-            <img  class="imgSliderInd" src="img/sliderI/t2.png" alt="">
+            <img  class="imgSliderInd" src="img/sliderI/s2.png" alt="">
           </li>
           <li id="middle" style="width:50%;" onmouseover="zoom('over')" onmouseout="zoom('out')" onclick="zoomImgS('open')">
-            <img  class="imgSliderInd" src="img/sliderI/t3.png" alt="">
-              <p id="captionSliderInd">Texto 1: Tlayolis Jalapeños</p>
+            <img  class="imgSliderInd" src="img/sliderI/s3.png" alt="">
+              <p id="captionSliderInd">Texto 1: Sot Yuca</p>
           </li>
           <li style="width:25%;">
-            <img  class="imgSliderInd" src="img/sliderI/t4.png" alt="">
+            <img  class="imgSliderInd" src="img/sliderI/s4.png" alt="">
           </li>
           <li style="width:25%;">
-            <img  class="imgSliderInd" src="img/sliderI/t5.png" alt="">
+            <img  class="imgSliderInd" src="img/sliderI/s5.png" alt="">
           </li>
         </ul>
         <a class="reflect"  role="button" onmouseover="sliderIndOver('over',1)" onmouseout="sliderIndOver('out',1)" onclick="sliderIndividualCount('next')">
