--- a/potet.html
+++ b/potet.html
@@ -130,6 +130,7 @@ fluo.com.mx
       </div>
     </section>
     <section class="salmarPotet slide hideDisplay">
+      <div class="foodBack" style="background-image:url('img/food/potets-saldemar.png')"></div>
         <ul>
           <li>
             <div class="infoMock">
@@ -149,6 +150,7 @@ fluo.com.mx
         </ul>
     </section>
     <section class="habaneroPotet slide hideDisplay">
+      <div class="foodBack" style="background-image:url('img/food/potets-habanero.png')"></div>
       <ul>
         <li>
           <div class="infoMock">
@@ -169,6 +171,7 @@ fluo.com.mx
       </ul>
     </section>
     <section class="chilearbolPotet slide hideDisplay">
+      <div class="foodBack" style="background-image:url('img/food/potets-bbq.png')"></div>
       <ul>
         <li>
           <div class="infoMock">
