--- a/tlayolis.html
+++ b/tlayolis.html
@@ -130,6 +130,7 @@ fluo.com.mx
       </div>
     </section>
     <section class="jalapeno slide hideDisplay">
+      <div class="foodBack" style="background-image:url('img/food/tlayolis-jalapeno.png')"></div>
         <ul>
           <li>
             <div class="infoMock">
@@ -149,6 +150,7 @@ fluo.com.mx
         </ul>
     </section>
     <section class="habanero slide hideDisplay">
+      <div class="foodBack" style="background-image:url('img/food/tlayolis-habanero.png')"></div>
       <ul>
         <li>
           <div class="infoMock">
@@ -169,6 +171,7 @@ fluo.com.mx
       </ul>
     </section>
     <section class="bbq slide hideDisplay">
+      <div class="foodBack" style="background-image:url('img/food/tlayolis-bbq.png')"></div>
       <ul>
         <li>
           <div class="infoMock">
