--- a/sot.html
+++ b/sot.html
@@ -280,6 +280,12 @@ fluo.com.mx
       <path fill="#FFFFFF" opacity="0.50" d="M-41.5,0h1981c0,0-427.5,166.5-990.5,166.5S-41.5,0-41.5,0z"/>
     </svg>
   </div>
+  <div id="prov">
+      <svg id="pathSvgProv" viewBox="0 0 1920 1080">
+        <path id="pathSotProv" fill="#ab8b3c" d="M1920,0H0v1080c0,0,218.1-133.9,586.8-145.4c199.7-6.2,432,30.1,646.2,51.5c257.5,25.6,434,12,551.2-28.5 c52.8-18.3,135.8-63.8,135.8-63.8V0z"/>
+      </svg>
+      <div id="fillSvg" style="background:#ab8b3c"></div>
+  </div>
   <script src="js/bowser.min.js" charset="utf-8"></script>
   <script type="text/javascript">
     var checkMobileIndex = false;
@@ -317,7 +323,6 @@ fluo.com.mx
           countTla('next')
         }
       }
-
     }
   </script>
   <script src="js/anime.min.js"></script>
