--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@ fluo.com.mx
   <div id="main" class="">
     <ul id="backHome">
       <li style="background-image:url('img/back-sot.jpg');"></li>
-      <li style="background:#fdc339; left:100vw; "></li>
-      <li style="background:#470f0f; left:200vw; "></li>
+      <li style="background-image:url('img/back-potet.png');"></li>
+      <li style="background:#724e4c; left:200vw;"></li>
     </ul>
     <section id="sot" class="producto hideOpacity hideDisplay">
       <div>
