--- a/potet.html
+++ b/potet.html
@@ -141,7 +141,7 @@ fluo.com.mx
                 las perspectivas cotidianas.
               </p>
               <br><br>
-              <img class="elemLeft" src="img/tabla-tla.png" alt="" width="250">
+              <img class="elemLeft" src="img/tablas/pot-1.png" alt="" width="250">
             </div>
           </li>
           <li>
@@ -162,7 +162,7 @@ fluo.com.mx
               y experiencias.
             </p>
             <br><br>
-            <img class="elemLeft" src="img/tabla-tla.png" alt="" width="250">
+            <img class="elemLeft" src="img/tablas/pot-2.png" alt="" width="250">
           </div>
         </li>
         <li>
@@ -182,7 +182,7 @@ fluo.com.mx
               con amigos y personas cercanas.
             </p>
             <br><br>
-            <img class="elemLeft" src="img/tabla-tla.png" alt="" width="250">
+            <img class="elemLeft" src="img/tablas/pot-3.png" alt="" width="250">
           </div>
         </li>
         <li>
