--- a/sot.html
+++ b/sot.html
@@ -140,7 +140,7 @@ fluo.com.mx
                 las perspectivas cotidianas.
               </p>
               <br><br>
-              <img class="elemLeft" src="img/tabla-tla.png" alt="" width="250">
+              <img class="elemLeft" src="img/tablas/sot-1.png" alt="" width="250">
             </div>
           </li>
           <li>
@@ -160,7 +160,7 @@ fluo.com.mx
               y experiencias.
             </p>
             <br><br>
-            <img class="elemLeft" src="img/tabla-tla.png" alt="" width="250">
+            <img class="elemLeft" src="img/tablas/sot-2.png" alt="" width="250">
           </div>
         </li>
         <li>
@@ -179,7 +179,7 @@ fluo.com.mx
               con amigos y personas cercanas.
             </p>
             <br><br>
-            <img class="elemLeft" src="img/tabla-tla.png" alt="" width="250">
+            <img class="elemLeft" src="img/tablas/sot-3.png" alt="" width="250">
           </div>
         </li>
         <li>
