--- a/nosotros.html
+++ b/nosotros.html
@@ -129,35 +129,47 @@ fluo.com.mx
           <ul>
             <li class="liImg" style="background: #fdc339;" onmouseover="overNosotros('over', 0)" onmouseout="overNosotros('out', 0)">
               <img class="imgProductoNos" src="img/items/0.png" alt="" width="250">
-              <div class="overInfo" style="background:rgba(254,171,59)">
-                <h2>Sal de Mar</h2>
-                <p>Perfecto empujón para cambiar <br>
+              <div class="overInfo" style="background:rgba(254,171,59,0.5)">
+                <div class="productosBullets">
+                  <img src="img/items/back-0.svg">
+                </div>
+                <h2 style="color:#000;">Sal de Mar</h2>
+                <p style="color:#000;">Perfecto empujón para cambiar <br>
                 las perspectivas cotidianas.</p>
-                <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" alt="" width="25">
+                <img class="iconMore unrotateIcon" src="img/icons/moreHoverBlack.svg" alt="" width="25">
               </div>
             </li>
             <li class="liImg" style="background: #f48f3d;" onmouseover="overNosotros('over', 1)" onmouseout="overNosotros('out', 1)">
               <img class="imgProductoNos" src="img/items/1.png" alt="" width="250">
-              <div class="overInfo" style="background:rgba(207,68,58)">
-                <h2>Habanero</h2>
-                <p>Perfecto empujón para cambiar <br>
+              <div class="overInfo" style="background:rgba(207,68,58,0.5)">
+                <div class="productosBullets">
+                  <img src="img/items/back-1.svg">
+                </div>
+                <h2 style="color:#000;">Habanero</h2>
+                <p style="color:#000;">Perfecto empujón para cambiar <br>
                 las perspectivas cotidianas.</p>
-                <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" alt="" width="25">
+                <img class="iconMore unrotateIcon" src="img/icons/moreHoverBlack.svg" alt="" width="25">
               </div>
 
             </li>
             <li class="liImg" style="background: #cf3a44;" onmouseover="overNosotros('over', 2)" onmouseout="overNosotros('out', 2)">
               <img class="imgProductoNos" src="img/items/2.png" alt="" width="250">
-              <div class="overInfo" style="background:rgba(253,193,57)">
-                <h2>Chile de árbol</h2>
-                <p>Perfecto empujón para cambiar <br>
+              <div class="overInfo" style="background:rgba(253,193,57,0.5)">
+                <div class="productosBullets">
+                  <img src="img/items/back-2.svg">
+                </div>
+                <h2 style="color:#000;">Chile de árbol</h2>
+                <p style="color:#000;">Perfecto empujón para cambiar <br>
                 las perspectivas cotidianas.</p>
-                <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" alt="" width="25">
+                <img class="iconMore unrotateIcon" src="img/icons/moreHoverBlack.svg" alt="" width="25">
               </div>
             </li>
             <li class="liImg" style="background: #be2872;" onmouseover="overNosotros('over', 3)" onmouseout="overNosotros('out', 3)">
               <img class="imgProductoNos" src="img/items/3.png" alt="" width="250">
-              <div class="overInfo" style="background:rgba(156,50,59)">
+              <div class="overInfo" style="background:rgba(156,50,59,0.5)">
+                <div class="productosBullets">
+                  <img src="img/items/back-3.svg">
+                </div>
                 <h2>Chile de árbol</h2>
                 <p>Ideal para disfrutar una comida <br>
                 con amigos y personas cercanas.</p>
@@ -166,7 +178,10 @@ fluo.com.mx
             </li>
             <li class="liImg" style="background: #9c323b;" onmouseover="overNosotros('over', 4)" onmouseout="overNosotros('out', 4)">
               <img class="imgProductoNos" src="img/items/4.png" alt="" width="250">
-              <div class="overInfo" style="background:rgba(187,148,64)">
+              <div class="overInfo" style="background:rgba(187,148,64,0.5)">
+                <div class="productosBullets">
+                  <img src="img/items/back-4.svg">
+                </div>
                 <h2>Yuca</h2>
                 <p>El mood ideal para salir de fiesta y <br>
                 conocer nuevos lugares, personas <br>
@@ -175,8 +190,11 @@ fluo.com.mx
               </div>
             </li>
             <li class="liImg" style="background: #bb9440;" onmouseover="overNosotros('over', 5)" onmouseout="overNosotros('out', 5)">
-              <img class="imgProductoNos" src="img/items/5.png" alt="" width="250">
-              <div class="overInfo" style="background:rgba(190,40, 114)">
+              <img class="imgProductoNos zoomOutImg" src="img/items/5.png" alt="" width="250">
+              <div class="overInfo" style="background:rgba(190,40, 114,0.5)">
+                <div class="productosBullets">
+                  <img src="img/items/back-5.svg">
+                </div>
                 <h2>Sal de Mar</h2>
                 <p>Perfecto empujón para cambiar <br>
                 las perspectivas cotidianas.</p>
@@ -184,8 +202,11 @@ fluo.com.mx
               </div>
             </li>
             <li class="liImg" style="background: #47100f;" onmouseover="overNosotros('over', 6)" onmouseout="overNosotros('out', 6)">
-              <img class="imgProductoNos" src="img/items/6.png" alt="" width="250">
-              <div class="overInfo" style="background:rgba(186,113,50)">
+              <img class="imgProductoNos zoomOutImg" src="img/items/6.png" alt="" width="250">
+              <div class="overInfo" style="background:rgba(186,113,50,0.5)">
+                <div class="productosBullets">
+                  <img src="img/items/back-6.svg">
+                </div>
                 <h2>Barbecue</h2>
                 <p>Ideal para disfrutar una comida <br>
                 con amigos y personas cercanas.</p>
@@ -193,8 +214,11 @@ fluo.com.mx
               </div>
             </li>
             <li class="liImg" style="background: #208245;" onmouseover="overNosotros('over', 7)" onmouseout="overNosotros('out', 7)">
-              <img class="imgProductoNos" src="img/items/7.png" alt="" width="250">
-              <div class="overInfo" style="background:rgba(71,16,15)">
+              <img class="imgProductoNos zoomOutImg" src="img/items/7.png" alt="" width="250">
+              <div class="overInfo" style="background:rgba(71,16,15,0.5)">
+                <div class="productosBullets">
+                  <img src="img/items/back-7.svg">
+                </div>
                 <h2>Jalapeño</h2>
                 <p>El perfecto empujón para cambiar <br>
                   las perspectivas cotidianas.</p>
@@ -202,8 +226,11 @@ fluo.com.mx
               </div>
             </li>
             <li class="liImg" style="background: #ba7132;" onmouseover="overNosotros('over', 8)" onmouseout="overNosotros('out', 8)">
-              <img class="imgProductoNos" src="img/items/8.png" alt="" width="250">
-              <div class="overInfo" style="background:rgba(32,130,69)">
+              <img class="imgProductoNos zoomInOut" src="img/items/8.png" alt="" width="250">
+              <div class="overInfo" style="background:rgba(32,130,69,0.5)">
+                <div class="productosBullets">
+                  <img src="img/items/back-8.svg">
+                </div>
                 <h2>Habanero</h2>
                 <p>El mood ideal para salir de fiesta y <br>
                 conocer nuevos lugares, personas <br>
@@ -211,7 +238,7 @@ fluo.com.mx
                 <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" alt="" width="25">
               </div>
             </li>
-            <li class="liTexto" style="background: #e6e6e6;">
+            <li id="moreHover" class="liTexto" style="background: #e6e6e6;">
               <a>
                 Ver más <br>
                 información +
