--- a/newHTML/index.html
+++ b/newHTML/index.html
@@ -54,18 +54,18 @@ fluo.com.mx
       <img src="img/logotipo-yot.svg" height="53">
     </a>
     <ul class="outerDesktop desktop">
-      <li><a href="#"> <img src="img/menu/nosotros-out.svg" title="Ir a Nosotros" alt="Nosotros" height="30"> </a></li>
-      <li><a href="#"> <img src="img/menu/sot-out.svg" title="Ir a Sot" alt="Sot" height="30"> </a></li>
-      <li><a href="#"> <img src="img/menu/potet-out.svg" title="Ir a Potet" alt="Potet" height="30"> </a></li>
-      <li><a href="#"> <img src="img/menu/tlayolis-out.svg" title="Ir a Tlayolis" alt="Tlayolis" height="30"> </a></li>
+      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/nosotros-out.svg" title="Ir a Nosotros" alt="Nosotros" height="30"> </a></li>
+      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/sot-out.svg" title="Ir a Sot" alt="Sot" height="30"> </a></li>
+      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/potet-out.svg" title="Ir a Potet" alt="Potet" height="30"> </a></li>
+      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/tlayolis-out.svg" title="Ir a Tlayolis" alt="Tlayolis" height="30"> </a></li>
     </ul>
     <ul class="outerRedes desktop">
-      <li><a href="#"> <img src="img/menu/tel-out.svg" title="5567303009" alt="Teléfono Yot Mx" height="35"> </a></li>
-      <li><a href="#"> <img src="img/menu/mail-out.svg" title="info@yot.com.mx" alt="Correo Yot Mx" height="35"> </a></li>
-      <li><a href="#"> <img src="img/menu/fb-out.svg" title="Ir a Facebook" alt="Facebook" height="35"> </a></li>
-      <li><a href="#"> <img src="img/menu/ig-out.svg" title="Ir a Instagram" alt="Instagram" height="35"> </a></li>
+      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/tel-out.svg" title="5567303009" alt="Teléfono Yot Mx" height="35"> </a></li>
+      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/mail-out.svg" title="info@yot.com.mx" alt="Correo Yot Mx" height="35"> </a></li>
+      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/fb-out.svg" title="Ir a Facebook" alt="Facebook" height="35"> </a></li>
+      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/ig-out.svg" title="Ir a Instagram" alt="Instagram" height="35"> </a></li>
     </ul>
-    <a role="button">
+    <a role="button" class="menuMobile">
       <img src="img/menu/menu-out.svg" height="53">
     </a>
   </nav>
