--- a/newHTML/index.html
+++ b/newHTML/index.html
@@ -49,36 +49,100 @@ fluo.com.mx
     </div>
     <p id="percentage">1%</p>
   </div>
-  <nav id="main">
+  <nav class="main">
     <a html="index.html">
-      <img src="img/logotipo-yot.svg" height="53">
+      <img onmouseover="changeIcon('over', 'menu/logotipo-', this)" onmouseout="changeIcon('out', 'menu/logotipo-', this)" src="img/menu/logotipo-out.svg" height="53">
     </a>
     <ul class="outerDesktop desktop">
-      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/nosotros-out.svg" title="Ir a Nosotros" alt="Nosotros" height="30"> </a></li>
-      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/sot-out.svg" title="Ir a Sot" alt="Sot" height="30"> </a></li>
-      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/potet-out.svg" title="Ir a Potet" alt="Potet" height="30"> </a></li>
-      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/tlayolis-out.svg" title="Ir a Tlayolis" alt="Tlayolis" height="30"> </a></li>
+      <li><a href="#"> <img onmouseover="changeIcon('over', 'menu/nosotros-', this)" onmouseout="changeIcon('out', 'menu/nosotros-', this)" src="img/menu/nosotros-out.svg" title="Ir a Nosotros" alt="Nosotros" height="30"> </a></li>
+      <li><a href="#"> <img onmouseover="changeIcon('over', 'menu/sot-', this)" onmouseout="changeIcon('out', 'menu/sot-', this)" src="img/menu/sot-out.svg" title="Ir a Sot" alt="Sot" height="30"> </a></li>
+      <li><a href="#"> <img onmouseover="changeIcon('over', 'menu/potet-', this)" onmouseout="changeIcon('out', 'menu/potet-', this)" src="img/menu/potet-out.svg" title="Ir a Potet" alt="Potet" height="30"> </a></li>
+      <li><a href="#"> <img onmouseover="changeIcon('over', 'menu/tlayolis-', this)" onmouseout="changeIcon('out', 'menu/tlayolis-', this)" src="img/menu/tlayolis-out.svg" title="Ir a Tlayolis" alt="Tlayolis" height="30"> </a></li>
     </ul>
     <ul class="outerRedes desktop">
-      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/tel-out.svg" title="5567303009" alt="Teléfono Yot Mx" height="35"> </a></li>
-      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/mail-out.svg" title="info@yot.com.mx" alt="Correo Yot Mx" height="35"> </a></li>
-      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/fb-out.svg" title="Ir a Facebook" alt="Facebook" height="35"> </a></li>
-      <li><a href="#" onmouseover="changeIcon(this, 'over')" onmouseout="changeIcon(this, 'out')"> <img src="img/menu/ig-out.svg" title="Ir a Instagram" alt="Instagram" height="35"> </a></li>
+      <li><a href="#"> <img onmouseover="changeIcon('over', 'menu/tel-', this)" onmouseout="changeIcon('out', 'menu/tel-', this)" src="img/menu/tel-out.svg" title="5567303009" alt="Teléfono Yot Mx" height="30"> </a></li>
+      <li><a href="#"> <img onmouseover="changeIcon('over', 'menu/mail-', this)" onmouseout="changeIcon('out', 'menu/mail-', this)" src="img/menu/mail-out.svg" title="info@yot.com.mx" alt="Correo Yot Mx" height="30"> </a></li>
+      <li><a href="#"> <img onmouseover="changeIcon('over', 'menu/fb-', this)" onmouseout="changeIcon('out', 'menu/fb-', this)" src="img/menu/fb-out.svg" title="Ir a Facebook" alt="Facebook" height="30"> </a></li>
+      <li><a href="#"> <img onmouseover="changeIcon('over', 'menu/ig-', this)" onmouseout="changeIcon('out', 'menu/ig-', this)" src="img/menu/ig-out.svg" title="Ir a Instagram" alt="Instagram" height="30"> </a></li>
+      <li><a href="#"> <img onmouseover="changeIcon('over', 'menu/tel-', this)" onmouseout="changeIcon('out', 'menu/tel-', this)" src="img/menu/tel-out.svg" title="Mute" alt="Icono Sonido" height="30"> </a></li>
     </ul>
-    <a role="button" class="menuMobile">
-      <img src="img/menu/menu-out.svg" height="53">
+    <a role="button" class="menuMobile" onclick="menuMobile('open')">
+      <img onmouseover="changeIcon('over', 'menu/menu-', this)" onmouseout="changeIcon('out', 'menu/menu-', this)" src="img/menu/menu-out.svg" height="50">
     </a>
   </nav>
+  <ul id="backs">
+    <li style="background-image:url('img/sot/background.jpg'); left:0;"></li>
+    <li style="background-image:url('img/potet/background.jpg'); left:100vw;"></li>
+    <li style="background-image:url('img/tlayolis/background.jpg'); left:200vw;"></li>
+  </ul>
   <section id="mainIndex">
+    <article class="normal showDisplayFlex">
+      <header>
+        <img src="img/sot/logotipo-sot.svg" alt="Logotipo Sot Mx">
+        <p class="prox">Próximamente</p>
+        <h2>Lo natural es ser tú</h2>
+        <p>#eligeNatural #eligeSot</p>
+      </header>
+      <div>
+        <div style="background-image:url('img/sot/inicio.png')"></div>
+      </div>
+    </article>
 
+    <article class="normal hideDisplay">
+      <header>
+        <img src="img/potet/logotipo-potet.svg" alt="Logotipo Sot Mx">
+        <p class="prox">Próximamente</p>
+        <h2>Lo natural es ser tú</h2>
+        <p>#eligeNatural #eligeSot</p>
+      </header>
+      <div> <div style="background-image:url('img/potet/inicio.png')"></div> </div>
+    </article>
+
+    <article class="normal hideDisplay">
+      <header>
+        <img src="img/tlayolis/logotipo-tlayolis.svg" alt="Logotipo Sot Mx">
+        <p class="prox">Próximamente</p>
+        <h2>Lo natural es ser tú</h2>
+        <p>#eligeNatural #eligeSot</p>
+      </header>
+      <div> <div style="background-image:url('img/tlayolis/inicio.png')"></div> </div>
+    </article>
   </section>
+  <nav id="interfaz">
+    <a role="button"><img onclick="slider('prev', '#mainIndex', 'hideDisplay', 'showDisplayFlex', true)" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" alt="Anterior" title="Anterior" width="40"></a>
+    <a role="button"><img onclick="slider('next', '#mainIndex', 'hideDisplay', 'showDisplayFlex', true)" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" class="rotIcon" src="img/icons/arrow-out.svg" alt="Siguiente" title="Siguiente" width="40"></a>
+  </nav>
+  <footer class="main">
+    <p>Derechos reservados Grupo Yot Mx© 2017</p>
+    <p>info@yot.com.mx</p>
+    <p>Coded by <a href="fluo.com.mx">Fluo MX</a></p>
+  </footer>
+  <div id="preventHeight" class="hideDisplay">
+    <p>Por favor incrementa la altura de tu pantalla</p>
+  </div>
+  <audio id="hoverSound">
+    <source src="assets/hover.mp3" type="audio/mpeg">
+  </audio>
+  <script src="js/bowser.min.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
   <script type="text/javascript">
     window.onload = function(){
       countLoading();
     }
+    window.onorientationchange = function(){
+      if(window.orientation == 90 || window.orientation == -90){
+        changeLandscape('l');
+      } else {
+        changeLandscape('p');
+      }
+    }
     window.onresize = function (){
       var s = document.getElementById("s").innerHTML = "Width: " + window.innerWidth + "px | Height: " + window.innerHeight + "px";
+      if(!checkBowser && window.innerHeight < 530){
+        preventHeight('min');
+      } else {
+        preventHeight('max');
+      }
     }
   </script>
 </body>
