--- a/newHTML/index.html
+++ b/newHTML/index.html
@@ -49,6 +49,20 @@ fluo.com.mx
     </div>
     <p id="percentage">1%</p>
   </div>
+  <div id="telPopW">
+    <div>
+      <a class="closeMenu" role="button" onclick="popPhone('close')" onmouseover="overMenuClose('over', this)" onmouseout="overMenuClose('out', this)">
+        <span class="rotA rotccw"></span>
+        <span class="rotB rotcw"></span>
+      </a>
+      <p>
+        +1 52 5567303009<br>
+        Horarios de atención: <br>
+        Lunes - Viernes <br>
+        9:00am a 19:00pm <br>
+      </p>
+    </div>
+  </div>
   <nav class="main">
     <a html="index.html">
       <img onmouseover="changeIcon('over', 'menu/logotipo-', this)" onmouseout="changeIcon('out', 'menu/logotipo-', this)" src="img/menu/logotipo-out.svg" height="53">
@@ -60,23 +74,25 @@ fluo.com.mx
       <li><a href="#"> <img onmouseover="changeIcon('over', 'menu/tlayolis-', this)" onmouseout="changeIcon('out', 'menu/tlayolis-', this)" src="img/menu/tlayolis-out.svg" title="Ir a Tlayolis" alt="Tlayolis" height="30"> </a></li>
     </ul>
     <ul class="outerRedes desktop">
-      <li><a href="#"> <img onmouseover="changeIcon('over', 'menu/tel-', this)" onmouseout="changeIcon('out', 'menu/tel-', this)" src="img/menu/tel-out.svg" title="5567303009" alt="Teléfono Yot Mx" height="30"> </a></li>
-      <li><a href="#"> <img onmouseover="changeIcon('over', 'menu/mail-', this)" onmouseout="changeIcon('out', 'menu/mail-', this)" src="img/menu/mail-out.svg" title="info@yot.com.mx" alt="Correo Yot Mx" height="30"> </a></li>
+      <li><a role="button" class="phonePop" > <img onmouseover="changeIcon('over', 'menu/tel-', this)" onmouseout="changeIcon('out', 'menu/tel-', this)" src="img/menu/tel-out.svg" title="5567303009" alt="Teléfono Yot Mx" height="30"> </a></li>
+      <li><a href="mailto:info@yot.com.mx"> <img onmouseover="changeIcon('over', 'menu/mail-', this)" onmouseout="changeIcon('out', 'menu/mail-', this)" src="img/menu/mail-out.svg" title="info@yot.com.mx" alt="Correo Yot Mx" height="30"> </a></li>
       <li><a href="#"> <img onmouseover="changeIcon('over', 'menu/fb-', this)" onmouseout="changeIcon('out', 'menu/fb-', this)" src="img/menu/fb-out.svg" title="Ir a Facebook" alt="Facebook" height="30"> </a></li>
       <li><a href="#"> <img onmouseover="changeIcon('over', 'menu/ig-', this)" onmouseout="changeIcon('out', 'menu/ig-', this)" src="img/menu/ig-out.svg" title="Ir a Instagram" alt="Instagram" height="30"> </a></li>
-      <li><a href="#"> <img onmouseover="changeIcon('over', 'menu/tel-', this)" onmouseout="changeIcon('out', 'menu/tel-', this)" src="img/menu/tel-out.svg" title="Mute" alt="Icono Sonido" height="30"> </a></li>
+      <li><a role="button" onclick="toggleAudio()"> <img id="iconMute" onmouseover="changeIcon('over', 'menu/nomuted-', this)" onmouseout="changeIcon('out', 'menu/nomuted-', this)" src="img/menu/nomuted-out.svg" title="Mute" alt="Icono Sonido" height="30"> </a></li>
     </ul>
     <a role="button" class="menuMobile" onclick="menuMobile('open')">
       <img onmouseover="changeIcon('over', 'menu/menu-', this)" onmouseout="changeIcon('out', 'menu/menu-', this)" src="img/menu/menu-out.svg" height="50">
     </a>
   </nav>
-  <ul id="backs">
-    <li style="background-image:url('img/sot/background.jpg'); left:0;"></li>
-    <li style="background-image:url('img/potet/background.jpg'); left:100vw;"></li>
-    <li style="background-image:url('img/tlayolis/background.jpg'); left:200vw;"></li>
-  </ul>
+  <div id="backW">
+    <ul id="backs">
+      <li style="background-image:url('img/sot/background.jpg'); left:0;"></li>
+      <li style="background-image:url('img/potet/background.jpg'); left:100%;"></li>
+      <li style="background-image:url('img/tlayolis/background.jpg'); left:200%;"></li>
+    </ul>
+  </div>
   <section id="mainIndex">
-    <article class="normal showDisplayFlex">
+    <article class="normal showOpacity">
       <header>
         <img src="img/sot/logotipo-sot.svg" alt="Logotipo Sot Mx">
         <p class="prox">Próximamente</p>
@@ -84,33 +100,33 @@ fluo.com.mx
         <p>#eligeNatural #eligeSot</p>
       </header>
       <div>
-        <div style="background-image:url('img/sot/inicio.png')"></div>
+        <div style="background-image:url('img/inicio-0.png'); display:block;"></div>
       </div>
     </article>
 
-    <article class="normal hideDisplay">
+    <article class="normal hideOpacity">
       <header>
         <img src="img/potet/logotipo-potet.svg" alt="Logotipo Sot Mx">
         <p class="prox">Próximamente</p>
         <h2>Lo natural es ser tú</h2>
         <p>#eligeNatural #eligeSot</p>
       </header>
-      <div> <div style="background-image:url('img/potet/inicio.png')"></div> </div>
+      <div> <div style="background-image:url('img/inicio-1.png'); "></div> </div>
     </article>
 
-    <article class="normal hideDisplay">
+    <article class="tlayolis hideOpacity">
       <header>
         <img src="img/tlayolis/logotipo-tlayolis.svg" alt="Logotipo Sot Mx">
         <p class="prox">Próximamente</p>
         <h2>Lo natural es ser tú</h2>
         <p>#eligeNatural #eligeSot</p>
       </header>
-      <div> <div style="background-image:url('img/tlayolis/inicio.png')"></div> </div>
+      <div> <div style="background-image:url('img/inicio-2.png')"></div> </div>
     </article>
   </section>
   <nav id="interfaz">
-    <a role="button"><img onclick="slider('prev', '#mainIndex', 'hideDisplay', 'showDisplayFlex', true)" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" alt="Anterior" title="Anterior" width="40"></a>
-    <a role="button"><img onclick="slider('next', '#mainIndex', 'hideDisplay', 'showDisplayFlex', true)" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" class="rotIcon" src="img/icons/arrow-out.svg" alt="Siguiente" title="Siguiente" width="40"></a>
+    <a role="button"><img onclick="slider('prev', '#mainIndex', 'hideOpacity', 'showOpacity', true)" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" src="img/icons/arrow-out.svg" alt="Anterior" title="Anterior" width="40"></a>
+    <a role="button"><img onclick="slider('next', '#mainIndex', 'hideOpacity', 'showOpacity', true)" onmouseover="changeIcon('over', 'icons/arrow-', this)" onmouseout="changeIcon('out', 'icons/arrow-', this)" class="rotIcon" src="img/icons/arrow-out.svg" alt="Siguiente" title="Siguiente" width="40"></a>
   </nav>
   <footer class="main">
     <p>Derechos reservados Grupo Yot Mx© 2017</p>
@@ -128,6 +144,8 @@ fluo.com.mx
   <script type="text/javascript">
     window.onload = function(){
       countLoading();
+      setPhone();
+      detectswipe('interfaz', swipeTransformIndex);
     }
     window.onorientationchange = function(){
       if(window.orientation == 90 || window.orientation == -90){
@@ -138,7 +156,7 @@ fluo.com.mx
     }
     window.onresize = function (){
       var s = document.getElementById("s").innerHTML = "Width: " + window.innerWidth + "px | Height: " + window.innerHeight + "px";
-      if(!checkBowser && window.innerHeight < 530){
+      if(!checkBowser && window.innerHeight < 380){
         preventHeight('min');
       } else {
         preventHeight('max');
