--- a/newHTML/index.html
+++ b/newHTML/index.html
@@ -129,7 +129,7 @@ fluo.com.mx
         <img src="img/potet/logotipo-potet.svg" alt="Logotipo Sot Mx">
         <p class="prox">Próximamente</p>
         <h2>Lo natural es ser tú</h2>
-        <p>#eligeNatural #eligeSot</p>
+        <p>#purasPapas</p>
       </header>
       <div> <div style="background-image:url('img/inicio-1.png'); "></div> </div>
     </article>
@@ -138,8 +138,10 @@ fluo.com.mx
       <header>
         <img src="img/tlayolis/logotipo-tlayolis.svg" alt="Logotipo Sot Mx">
         <p class="prox">Próximamente</p>
-        <h2>Lo natural es ser tú</h2>
-        <p>#eligeNatural #eligeSot</p>
+        <p style="font-size:1rem; line-height:1.2; text-align:center; margin-bottom:10px;">Si nosotros pudimos hacer <br>
+          la mejor mezcla de papa y maíz</p>
+        <h2>¿Qué no puedes hacer tú?</h2>
+        <p>#AtréveteACambiar y #RífateAHacerlo</p>
       </header>
       <div> <div style="background-image:url('img/inicio-2.png')"></div> </div>
     </article>
