--- a/tlayolis.html
+++ b/tlayolis.html
@@ -145,12 +145,12 @@ fluo.com.mx
             </div>
           </li>
           <li>
-            <div class="mockProd elemRight wiggleOut" style="background-image:url('../img/tla-jalapeno.png')" onmouseover="wiggleChange(this, 'over')" onmouseout="wiggleChange(this, 'out')"></div>
+            <div class="mockProd elemRight wiggleOut" style="background-image:url('img/tla-jalapeno.png')" onmouseover="wiggleChange(this, 'over')" onmouseout="wiggleChange(this, 'out')"></div>
           </li>
         </ul>
     </section>
     <section class="habanero slide hideDisplay">
-      <div class="foodBack" style="background-image:url('img/food/tlayolis-habanero.png')"></div>
+      <div class="foodBack" style="background-image:url('img/tlayolis-habanero.png')"></div>
       <ul>
         <li>
           <div class="infoMock">
@@ -171,7 +171,7 @@ fluo.com.mx
       </ul>
     </section>
     <section class="bbq slide hideDisplay">
-      <div class="foodBack" style="background-image:url('img/food/tlayolis-bbq.png')"></div>
+      <div class="foodBack" style="background-image:url('img/tlayolis-bbq.png')"></div>
       <ul>
         <li>
           <div class="infoMock">
